# letter_recognition

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/letter_recognition/data/train/: X_train_resampled.npy  X_train_weight.npy  y_train_resampled.npy  y_train_weight.npy
src/letter_recognition/data/val/: y_val.npy
src/letter_recognition/model/: lenet5.py  lenet5_lightning.py  lenet5_weight.pth
src/letter_recognition/scripts/: test.py  train_lenet5.py  train_lightning.py
src/letter_recognition/utils/: custom_data_loader.py  data_loader.py  evaluation_metrics.py
tests/test_model/: test_lenet5.py
tests/test_utils/: test_custom_data_loader.py  test_data_loader.py  test_evaluation_metrics.py
