[tool.poetry]
name = "letter_recognition"
version = "0.1.1"
description = "ML program to recognise capital letters"
authors = ["marcelele-0"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
torch = "^2.3.0"
pytest = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
